Ignore Pycharm files.

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@ dashboard_loader/dashboard_loader/settings_*.py
 dashboard_api/dashboard_api/wsgi_*.py
 dashboard_loader/dashboard_loader/wsgi_*.py
 dashboard_loader/static/**
+.idea/**
+*/.idea/**
 *~*#
 *.pyc
 *.pyo
