--- a/dashboard_loader/coag_uploader/exports/03_projects.json
+++ b/dashboard_loader/coag_uploader/exports/03_projects.json
@@ -238,6 +238,7 @@
             "raw_data_sets": [
                 {
                     "url": "data_table", 
+                    "name": "Infrastructure Projects", 
                     "columns": [
                         {
                             "url": "jurisdiction", 
@@ -289,6 +290,7 @@
                 }, 
                 {
                     "url": "infrastructure_projects", 
+                    "name": "Infrastructure Projects Data", 
                     "columns": [
                         {
                             "url": "jurisdiction", 
@@ -340,6 +342,7 @@
                 }, 
                 {
                     "url": "infrastructure_projects_status", 
+                    "name": "Infrastructure Key Projects Status Data", 
                     "columns": [
                         {
                             "url": "jurisdiction", 
