--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,11 @@
 # *.[oa]
 # *~
 dashboard_api/dashboard_api/settings.py
+dashboard_api/dashboard_api/.env
 dashboard_loader/dashboard_loader/settings.py
 dashboard_api/dashboard_api/settings_*.py
 dashboard_loader/dashboard_loader/settings_*.py
+dashboard_loader/dashboard_loader/.env
 dashboard_api/dashboard_api/wsgi_*.py
 dashboard_loader/dashboard_loader/wsgi_*.py
 dashboard_loader/static/**
