--- a/dashboard_loader/requirements.txt
+++ b/dashboard_loader/requirements.txt
@@ -1,4 +1,6 @@
 django>=1.10.5,<2.0
+dj-database-url>=0.5.0
+python-decouple>=3.1
 django-cors-headers>=2.0.2
 psycopg2-binary>=2.6.2
 pytz>=2016.10
